Maj des fichiers main de test et de system pour pouvoir utiliser physX (création de l'instance dans main, le run avec fps limité dans system). +maj vcproj pour les trigger.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -592,6 +592,22 @@
 				RelativePath=".\Physics\Physicalizer.h"
 				>
 			</File>
+			<Filter
+				Name="Trigger"
+				>
+				<File
+					RelativePath=".\Physics\Trigger\Trigger.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Physics\Trigger\UserData.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Physics\Trigger\UserData.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="PostProcesses"
