Commit du vcproj de CrockRising pour les classes Hero et Enemy. Ajout de la classe Hero (pour l'instant sans les états du perso).

--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -258,6 +258,26 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Characters"
+			>
+			<File
+				RelativePath=".\Characters\Enemy.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Characters\Enemy.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Characters\Hero.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Characters\Hero.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\Main.cpp"
 			>
