Ajout des classes utilitaires pour le Cooking des PhysicsStaticMesh. Ajout de la classe ControledBB (ControllerHitReport aussi), SceneObjetPhysics, PhysicsStaticMesh ainsi que la classe ControledPhysicsCharacter. (certain ce sont pas encore au point)

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -604,6 +604,14 @@
 				RelativePath=".\Physics\Physicalizer.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Physics\Stream.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Physics\Stream.h"
+				>
+			</File>
 			<Filter
 				Name="Trigger"
 				>
