--- a/src/src/Test/Test.vcproj
+++ b/src/src/Test/Test.vcproj
@@ -174,6 +174,14 @@
 			Name="Levels"
 			>
 			<File
+				RelativePath=".\Levels\LevelDemo_20_4.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Levels\LevelDemo_20_4.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Levels\LevelStart.cpp"
 				>
 			</File>
@@ -195,6 +203,14 @@
 			</File>
 			<File
 				RelativePath=".\Obj3d\GameCamera.h"
+				>
+			</File>
+			<File
+				RelativePath="..\CrockRising\Characters\Hero.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\CrockRising\Characters\Hero.h"
 				>
 			</File>
 		</Filter>
