Moteur son en progression.. Les projets sont maintenant linkés avec OpenAL : tout ce que vous avez besoin de savoir est sur le wiki. Suppression de tinyxmld.lib qui ne servait plus à rien.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -566,6 +566,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Sound"
+				>
+				<File
+					RelativePath=".\Resources\Sound.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Resources\Sound.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Game"
