Pas mal de changements au niveau moteur graphique. - Changement du shader de normal map (default_normalmap.fx) - Gestion de la specular map - Alpha blending - Ajout d'un shader default_skinnormalmap.fx - Il y a maintenant une unique méthode Init() pour initialiser les objets - Il faut appuyer sur "f" pour afficher le fps - d'autres détails...

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -533,7 +533,15 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\data\shader\default_normalmap.fx"
+						>
+					</File>
+					<File
 						RelativePath="..\..\data\shader\default_skinning.fx"
+						>
+					</File>
+					<File
+						RelativePath="..\..\data\shader\default_skinnormalmap.fx"
 						>
 					</File>
 					<File
