Refonte complète du moteur 2D. Il est maintenant plus proche de la conception du moteur 3D. Les vertex buffer ne sont modifiés que quand ils doivent l'être (la méthode est relativement crade mais efficace en théorie..). Ajout d'une donnée contenant le nom du jeu dans le Game (il faudrait que le titre de la fenêtre soit calé dessus).

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -306,35 +306,11 @@
 				Name="2D"
 				>
 				<File
-					RelativePath=".\Objects\2D\Background.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Objects\2D\Background.h"
-					>
-				</File>
-				<File
 					RelativePath=".\Objects\2D\Object2D.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\Objects\2D\Object2D.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Objects\2D\Quad.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Objects\2D\Quad.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Objects\2D\Sprite.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Objects\2D\Sprite.h"
 					>
 				</File>
 				<File
@@ -345,6 +321,34 @@
 					RelativePath=".\Objects\2D\Text.h"
 					>
 				</File>
+				<Filter
+					Name="SceneObject2D"
+					>
+					<File
+						RelativePath=".\Objects\2D\Quad.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Objects\2D\Quad.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Objects\2D\SceneObject2D.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Objects\2D\SceneObject2D.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Objects\2D\Sprite.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Objects\2D\Sprite.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="Skybox"
