Possibilité d'appliquer un shader sur les objets 2D. => Gestion de l'opacité sur les objets 2D. Démo dans le LevelAlafraise.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -537,6 +537,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\data\shader\default2d.fx"
+						>
+					</File>
+					<File
 						RelativePath="..\..\data\shader\default_normalmap.fx"
 						>
 					</File>
