Ajout du hud barre de vie. J'ai pas testé si ça compilait, puisque des gens ont archivé une version qui ne compilait pas juste avant (à cause d'une certaine méthode OuilleOuilleOuilleCaFaitMal qui n'est pas définie, en plus d'avoir un nom de merde !)..

--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -278,6 +278,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="2D"
+			>
+			<File
+				RelativePath=".\2D\HUDLife.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\2D\HUDLife.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\Main.cpp"
 			>
