Timing du Logo Alafraise (5 sec avant de passer au menu principal), on peut le passer en tapant Entrée. Ajout du menu principal (seul QUITTER est fonctionnel). Ajout du LevelCanyon (dans lequel il faudra faire le niveau du canyon). Possibilité de faire facilement un background à partir d'un Quad.

--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -244,6 +244,14 @@
 			<Filter
 				Name="Games"
 				>
+				<File
+					RelativePath=".\Levels\LevelCanyon.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Levels\LevelCanyon.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
