--- a/trunk/src/src/Test/Test.vcproj
+++ b/trunk/src/src/Test/Test.vcproj
@@ -214,6 +214,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Obj2d"
+			>
+			<File
+				RelativePath="..\CrockRising\2D\HUDLife.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\CrockRising\2D\HUDLife.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\Main.cpp"
 			>
