Ajout de l'AnimPlayer

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -301,6 +301,18 @@
 					RelativePath=".\Objects\SceneObjectAnimated.h"
 					>
 				</File>
+				<Filter
+					Name="AnimPlayer"
+					>
+					<File
+						RelativePath=".\Objects\AnimPlayer.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Objects\AnimPlayer.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="2D"
