Rajout de la map du sphinx terminée(mesh + texture + physique), en attente de scale.

--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -260,6 +260,14 @@
 					RelativePath=".\Levels\LevelCanyon.h"
 					>
 				</File>
+				<File
+					RelativePath=".\Levels\LevelSphinx.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Levels\LevelSphinx.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
