Ajout de EscMenu : un menu avec les options qui vont bien et qui apparait quand on appuie sur Escape. Il suffit de le créer dans un Level et de l'initialiser (et de pas oublier de la détruire dans le destructeur du Level), il se gère tout seul et met le jeu en pause. Note: ce truc est génial.

--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -314,6 +314,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\2D\EscMenu.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\2D\EscMenu.h"
+				>
+			</File>
+			<File
 				RelativePath=".\2D\HUDLife.cpp"
 				>
 			</File>
