--- a/trunk/src/src/CrockRising/CrockRising.vcproj
+++ b/trunk/src/src/CrockRising/CrockRising.vcproj
@@ -314,6 +314,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\2D\EscMenu.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\2D\EscMenu.h"
+				>
+			</File>
+			<File
 				RelativePath=".\2D\HUDLife.cpp"
 				>
 			</File>
