Rajout de la classe Perso dont dérivent Enemy et Hero. Permet de sortir totalement le gameplay de la physique o/ => Plus besoin de passer un enum avec les fonctions setobjectphysical/charactercontrol etc. Alleluia. La callback de collision arme/controller est définis dans perso.cpp

--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -301,6 +301,14 @@
 				RelativePath=".\Characters\Hero.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Characters\Perso.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Characters\Perso.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="2D"
