--- a/trunk/src/src/CrockRising/CrockRising.vcproj
+++ b/trunk/src/src/CrockRising/CrockRising.vcproj
@@ -301,6 +301,14 @@
 				RelativePath=".\Characters\Hero.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Characters\Perso.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Characters\Perso.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="2D"
