--- a/trunk/src/src/CrockRising/CrockRising.vcproj
+++ b/trunk/src/src/CrockRising/CrockRising.vcproj
@@ -211,8 +211,8 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/NODEFAULTLIB:libcmt&#x0D;&#x0A;/NODEFAULTLIB:libcmtd"
 				AdditionalDependencies="Engine.lib d3dx9.lib d3d9.lib OpenAL32.lib ogg.lib vorbis.lib vorbisfile.lib Winmm.lib tinyxml.lib AIToolkit.lib PhysXLoader.lib NxCooking.lib NxCharacter.lib XInput.lib"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)lib\release&quot;"
-				GenerateDebugInformation="true"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)lib\finalrelease&quot;"
+				GenerateDebugInformation="false"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
