Ajout d'une méthode pour obtenir le répertoire data/ ce sera plus simple. La config FinalRelease ne génère plus d'infos de debug.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -198,7 +198,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy &quot;$(OutDir)\$(ProjectName).lib&quot; &quot;$(SolutionDir)\lib\release\&quot;"
+				CommandLine="copy &quot;$(OutDir)\$(ProjectName).lib&quot; &quot;$(SolutionDir)\lib\finalrelease\&quot;"
 			/>
 		</Configuration>
 	</Configurations>
