Ca c'est de la maj !
=> clean du Gameplay (voir fofo)
=> ajout d'un setOrientation (rotation sans accumulation) des objects

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -209,6 +209,10 @@
 			Name="Core"
 			>
 			<File
+				RelativePath=".\Core\Macros.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Core\Math.h"
 				>
 			</File>
